Solutions for exercises done alone (Thomas)

--- a/Task_with_classes.ipynb
+++ b/Task_with_classes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -54,6 +54,166 @@
     "\n",
     "\n",
     "print(nash.relationships)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Homework \n",
+    "Add some code that makes use of comprehension expressions to your group.py file so that it prints out the following when the script is run:\n",
+    "\n",
+    "1. the maximum age of people in the group\n",
+    "2. the average (mean) number of relations among members of the group\n",
+    "3. the maximum age of people in the group that have at least one relation\n",
+    "4. [more advanced] the maximum age of people in the group that have at least one friend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's use the dictionary approach for this \n",
+    "\n",
+    "group = {\n",
+    "    \"Jill\": {\n",
+    "        \"age\": 26,\n",
+    "        \"job\": \"biologist\",\n",
+    "        \"relations\": {\n",
+    "            \"Zalika\": \"friend\",\n",
+    "            \"John\": \"partner\"\n",
+    "        }\n",
+    "    },\n",
+    "    \"Zalika\": {\n",
+    "        \"age\": 28,\n",
+    "        \"job\": \"artist\",\n",
+    "        \"relations\": {\n",
+    "            \"Jill\": \"friend\"\n",
+    "        }\n",
+    "    },\n",
+    "    \"John\": {\n",
+    "        \"age\": 27,\n",
+    "        \"job\": \"writer\",\n",
+    "        \"relations\": {\n",
+    "            \"Jill\": \"partner\"\n",
+    "        }\n",
+    "    },\n",
+    "    \"Nash\": {\n",
+    "        \"age\": 34,\n",
+    "        \"job\": \"chef\",\n",
+    "        \"relations\": {\n",
+    "            \"John\": \"cousin\",\n",
+    "            \"Zalika\": \"landlord\"\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1. The maximum age of people in the group \n",
+    "\n",
+    "max_age = max([group[person][\"age\"] for person in group])\n",
+    "print(max_age)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2. The mean number of relationships for people in the group\n",
+    "\n",
+    "import numpy as np\n",
+    "av_rels = np.mean([len(group[person][\"relations\"]) for person in group])\n",
+    "\n",
+    "print(av_rels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3 Maximum age of people in the group who have at least one relation\n",
+    "\n",
+    "group_w_rels = { }\n",
+    "\n",
+    "for person in group:\n",
+    "    if len(group[person][\"relations\"]) > 0:\n",
+    "        group_w_rels[person] = group[person]\n",
+    "\n",
+    "max_age_rels = max( \n",
+    "    group_w_rels[person][\"age\"] for person in group_w_rels \n",
+    ")\n",
+    "print(max_age_rels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Jill': {'age': 26, 'job': 'biologist', 'relations': {'Zalika': 'friend', 'John': 'partner'}}, 'Zalika': {'age': 28, 'job': 'artist', 'relations': {'Jill': 'friend'}}}\n",
+      "28\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4 [more advanced] the maximum age of people in the group that have at least one friend\n",
+    "\n",
+    "group_w_friends = { }\n",
+    "\n",
+    "for person in group:\n",
+    "    if \"friend\" in group[person][\"relations\"].values():\n",
+    "        group_w_friends[person] = group[person]\n",
+    "\n",
+    "max_age_friends = max( \n",
+    "    group_w_friends[person][\"age\"] for person in group_w_friends \n",
+    ")\n",
+    "\n",
+    "print(max_age_friends)"
    ]
   }
  ],
